Hopefully fixed safari spacing bug

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -9,7 +9,9 @@
     padding: 0 2rem;
     width: 100%;
     z-index: 999;
-    background-color: #10071d;
+    background-color: #0f061b;
+    border-bottom: 1px solid #d55d92;
+    box-shadow: rgba(213, 93, 146,0.3) 0px 3px 8px;
 }
 
 .logo {
@@ -49,7 +51,7 @@
         flex-direction: column;
         width: 100%;
         max-height: 300px;
-        transition: max-height 0.5s ease-in;
+        transition: max-height 0.3s ease-in;
     }
 
     a {
