--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -113,6 +113,7 @@
 
     span {
         font-weight: 400;
+        margin: 0;
     }
 
     @media(max-width:768px) {
